Fix background overflow on smaller screens

--- a/wwwdata/css/style.css
+++ b/wwwdata/css/style.css
@@ -2,12 +2,12 @@
 
 html {
     background: url('/images/background.jpg') no-repeat fixed center center/cover;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
     font-family: 'Oxanium', cursive;
     font-size: 15px;
-    height: 100%;
+    min-height: 100%;
     background-color: rgba(0, 0, 0, 0.75);
 }
